--- a/progress-keeper/angular.json
+++ b/progress-keeper/angular.json
@@ -31,7 +31,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "/node_modules/bulma/css/bulma.css",
+              "/node_modules/bulma/bulma.sass"
             ],
             "scripts": []
           },
