--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 .DS_Store
 data/
 src/__pycache__/
+template_changes.txt
+consider.txt
+differentStyles.txt
+output.json
+output.txt
+possibleDicts.txt
+src/main_beforenight.py
+src/main_beforesecondnight.py
+src/variables_beforesecondnight.py
