edited tsconfig.json and angular.json

--- a/progress-keeper/angular.json
+++ b/progress-keeper/angular.json
@@ -32,8 +32,8 @@
             ],
             "styles": [
               "src/styles.scss",
-              "/node_modules/bulma/css/bulma.css",
-              "/node_modules/bulma/bulma.sass"
+              "./node_modules/bulma/css/bulma.css",
+              "./node_modules/bulma/bulma.sass"
             ],
             "scripts": []
           },
