--- a/progress-keeper/tsconfig.json
+++ b/progress-keeper/tsconfig.json
@@ -22,6 +22,8 @@
     ],
     "resolveJsonModule": true, 
     "esModuleInterop": true,
+    "strictPropertyInitialization": false
+
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
